crates/baml-bridge/tests/ui/large_int_without_repr.rs
use baml_bridge::BamlType;

#[derive(BamlType)]
struct Bad {
    value: u64,
}

fn main() {}
